--- a/app/src/main/res/layout/action_toolbar_transfer.xml
+++ b/app/src/main/res/layout/action_toolbar_transfer.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.AppBarLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
@@ -21,17 +19,12 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:layout_marginEnd="?attr/actionBarSize"
             android:scaleType="centerInside"
-            android:layout_marginRight="?attr/actionBarSize"
 
             android:src="@drawable/img_logo" />
 
 
     </android.support.v7.widget.Toolbar>
-    <!--<View-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="4dp"-->
-    <!--android:layout_gravity="bottom"-->
-    <!--android:background="@drawable/shadow2"-->
-    <!--/>-->
+
 </android.support.design.widget.AppBarLayout>
