--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -2,52 +2,50 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/marginTen"
+    android:layout_marginLeft="@dimen/marginTen"
+    android:layout_marginRight="@dimen/marginTen"
     android:clickable="false"
-    android:elevation="8dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginBottom="10dp"
+    android:elevation="@dimen/margin_eight"
     android:foreground="?android:selectableItemBackground">
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="10dp">
+        android:layout_margin="@dimen/marginTen"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/nameTV"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textStyle="bold|italic"
-            android:textSize="18sp"
-            android:textAlignment="center"
-            android:text="Francisco Andrade"
-            />
+            <TextView
+                android:id="@+id/nameTV"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:textSize="@dimen/textSize_mid"
+                android:textStyle="bold|italic" />
 
             <TextView
                 android:id="@+id/transferTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Transfer"
-                android:padding="5dp"
-                android:textColor="@color/colorWhite"
-                android:background="@color/dark"/>
+                android:background="@color/dark"
+                android:padding="@dimen/margin_five"
+                android:text="@string/transfer_text"
+                android:textColor="@color/colorWhite" />
 
         </LinearLayout>
+
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorPrimaryDark"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_height="@dimen/margin_one"
+            android:layout_marginBottom="@dimen/marginTen"
+            android:layout_marginTop="@dimen/marginTen"
+            android:background="@color/colorPrimaryDark" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,11 +55,10 @@
             <TextView
                 android:id="@+id/emailTV"
                 android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textAlignment="center"
-                android:layout_height="wrap_content"
-                android:text="francisco@mail.com"
-                android:textSize="18sp"/>
+                android:textSize="@dimen/textSize_mid" />
 
             <TextView
                 android:id="@+id/idTV"
@@ -69,15 +66,11 @@
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:textAlignment="center"
-                android:textStyle="italic"
-                android:textSize="18sp"
                 android:textColor="@color/colorAccent"
-                android:text="125"/>
+                android:textSize="@dimen/textSize_mid"
+                android:textStyle="italic" />
 
         </LinearLayout>
-
-
-
 
     </LinearLayout>
 
