--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textColor="@color/colorBlack"
-    android:padding="10dp"
+    android:padding="@dimen/marginTen"
     android:textStyle="italic"
     android:fontFamily="sans-serif-medium"
    />
