--- a/app/src/main/res/layout/fragment_create_user.xml
+++ b/app/src/main/res/layout/fragment_create_user.xml
@@ -5,7 +5,7 @@
     android:layout_margin="10dp"
     android:background="@color/backgroundDark"
     android:orientation="vertical"
-    tools:context="com.example.franciscoandrade.button_challenge.CreateUserFragment">
+    tools:context="com.example.franciscoandrade.button_challenge.view.CreateUserFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
