--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -12,7 +12,28 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/marginTen"
+        android:orientation="horizontal">
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight="0.1"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="1dp"
+            android:layout_gravity="center"
+            android:layout_height="@dimen/margin_fifty"
+            android:layout_marginTop="@dimen/marginTen"
+            android:layout_marginLeft="@dimen/margin_five"
+            android:layout_marginBottom="@dimen/margin_five"
+            android:background="@color/colorAccent"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/marginTen"
+        android:layout_marginRight="@dimen/marginTen"
+        android:layout_marginBottom="@dimen/marginTen"
+        android:layout_marginLeft="@dimen/margin_five"
         android:orientation="vertical">
 
         <LinearLayout
@@ -33,7 +54,7 @@
                 android:id="@+id/transferTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/dark"
+                android:background="@color/colorAccentLight"
                 android:padding="@dimen/margin_five"
                 android:text="@string/transfer_text"
                 android:textColor="@color/colorWhite" />
@@ -71,6 +92,8 @@
                 android:textStyle="italic" />
 
         </LinearLayout>
+
+    </LinearLayout>
 
     </LinearLayout>
 
