--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,8 @@
     <dimen name="textSize_mid">18sp</dimen>
     <dimen name="margin_five">5dp</dimen>
     <dimen name="margin_one">1dp</dimen>
+    <dimen name="margin_fifty">70dp</dimen>
+    <dimen name="sixty_textSize">60sp</dimen>
     <item name="visible" type="id"/>
     <item name="masked" type="id"/>
 </resources>
